@@ -129,6 +129,8 @@ namespace LocARNA {
     
             bool opt_alifold_consensus_dp; //!< whether to compute consensus dp by alifold
 
+            std::string cons_struct_type; //! type of consensus structure
+
             bool opt_help; //!< whether to print help
             bool opt_galaxy_xml; //!< whether to print a galaxy xml wrapper for the parameters
             bool opt_version; //!< whether to print version
@@ -310,7 +312,7 @@ namespace LocARNA {
             
             RnaData *consensus=0L;
                 
-            if (clp.opt_alifold_consensus_dp) {
+            if (clp.opt_alifold_consensus_dp || clp.cons_struct_type=="alifold") {
                 MultipleAlignment ma(alignment, clp.opt_local_file_output);
 		
                 // compute cutoff probability as geometric mean
@@ -318,11 +320,13 @@ namespace LocARNA {
                 
                 RnaEnsemble ens(ma,pfparams,false,true); // alifold the alignment
 
-                consensus_structure = ens.min_free_energy_structure();
+                if (clp.cons_struct_type=="alifold") {
+                    consensus_structure = ens.min_free_energy_structure();
+                }
                 consensus = new RnaData(ens,
-                                       min_prob,
-                                       0, //don't filter by max_bps_length_ratio
-                                       pfparams); // construct rna data from ensemble
+                                        min_prob,
+                                        0, //don't filter by max_bps_length_ratio
+                                        pfparams); // construct rna data from ensemble
             } else {
                 // compute averaged consensus base pair probabilities
                 
@@ -332,7 +336,10 @@ namespace LocARNA {
                                         my_exp_probA,
                                         my_exp_probB,
                                         clp.opt_local_file_output);
-                consensus_structure = consensus->mea_structure(1);
+                
+                if (clp.cons_struct_type=="mea") {
+                    consensus_structure = consensus->mea_structure(1);
+                }
             }
             return consensus;
         }
@@ -393,9 +400,11 @@ namespace LocARNA {
                 if (out.good()) {
                     MultipleAlignment ma(alignment, clp.opt_local_file_output);
                     
-                    ma.set_annotation( MultipleAlignment::AnnoType::consensus_structure,
-                                       SequenceAnnotation(consensus_structure)
-                                       );
+                    if (consensus_structure!="") {
+                        ma.set_annotation( MultipleAlignment::AnnoType::consensus_structure,
+                                           SequenceAnnotation(consensus_structure)
+                                           );
+                    }
                     
                     out << "# STOCKHOLM 1.0" << std::endl;
                     out << "#=GF CC " << "Generated by "<<PACKAGE_STRING << std::endl;
