@@ -1,6 +1,8 @@
 ============================================================
 === 2016
 1.8.10alpha
+	Add consensus structure in locarna output, selectable types mea|alifold|none
+	Add optional stockholm output to mlocarna
 	Introduce quiet switch for locarna, locarna_p, sparse, and exparna_p
 	Code cleanup in driver programs
 	Handle sequence name clashes by systematic renaming
